@@ -5,18 +5,29 @@ buildscript {
     repositories {
         maven { url("https://repo1.maven.org/maven2") }
         maven { url("https://plugins.gradle.org/m2") }
+        maven { url("https://jitpack.io") }
     }
 
     dependencies {
-        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
+        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 /* We can't use `plugins` block here because of the multi-root setup, since the `plugins` block doesn't allow
  * specifying a plugin more than once throughout the whole project. */
-apply plugin: "kotlin"
+apply plugin: "application"
 apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: "kotlin"
+
+application {
+    mainClass.set("org.jetbrains.bio.fishbone.FishboneApp")
+}
+
+sourceCompatibility = 21
+targetCompatibility = sourceCompatibility
+compileKotlin { kotlinOptions.jvmTarget = sourceCompatibility }
+compileTestKotlin { kotlinOptions.jvmTarget = sourceCompatibility }
 
 if (rootProject == project) {
     repositories {
@@ -25,16 +36,9 @@ if (rootProject == project) {
     }
 }
 
-sourceCompatibility = 21
-targetCompatibility = sourceCompatibility
-compileKotlin { kotlinOptions.jvmTarget = sourceCompatibility }
-compileTestKotlin { kotlinOptions.jvmTarget = sourceCompatibility }
-
 project(":bioinf-commons")
 
 dependencies {
-    implementation project(":bioinf-commons")
-
     // Kotlin dependencies
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
@@ -76,6 +80,7 @@ dependencies {
 
     // Bioinformatics (science) dependencies
     implementation project(":bioinf-commons")
+
     implementation("org.nield:kotlin-statistics:1.2.1")
     implementation("org.apache.commons:commons-math3:3.6.1")
 
@@ -92,13 +97,20 @@ private String settingsFolder(final String propertyName, final String folderName
     }
 }
 
-tasks.withType(Test) {
-    // Continue execution even if tests for some of the sub-projects failed.
+test {
+    dependsOn ":bioinf-commons:generateTestOrganism"
+    dependsOn ":bioinf-commons:test"
+
+    include "**/*Test.class"
+
     ignoreFailures = true
     maxParallelForks = Runtime.runtime.availableProcessors()
     maxHeapSize = "1024m"
 
     testLogging.showStandardStreams = true
+
+    // Add JVM options for Vector API
+    jvmArgs '--add-modules', 'jdk.incubator.vector'
 
     systemProperty "genomes.path", settingsFolder("genomes.path", "genomes")
     systemProperty "experiments.path", settingsFolder("experiments.path", "experiments")
